Bug 1385783 - Don't assume both elfhack sections are next to each other. r=froydnj